--- a/CombineUIKit/Base.lproj/Main.storyboard
+++ b/CombineUIKit/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add New"/>
                                 <connections>
-                                    <segue destination="p1s-e2-wXg" kind="show" id="WYf-0I-f5A"/>
+                                    <segue destination="p1s-e2-wXg" kind="show" identifier="goToAddNewItem" id="WYf-0I-f5A"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -55,6 +55,10 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k2d-AO-wB5" secondAttribute="trailing" constant="149" id="qMy-P8-gwG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addNewButton" destination="k2d-AO-wB5" id="keW-X5-6Ev"/>
+                        <outlet property="tableView" destination="5XR-hD-omi" id="HpP-Co-1DP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -74,55 +78,64 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zWC-WJ-osr">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="20.333333333333332"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="DVc-sL-AXK"/>
+                                            <constraint firstAttribute="height" constant="20.329999999999998" id="WI9-db-33G"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Item Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ocq-dO-gbQ">
-                                        <rect key="frame" x="0.0" y="114.33333333333334" width="300" height="34"/>
+                                        <rect key="frame" x="0.0" y="114.33333333333334" width="300" height="290.66666666666663"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1IG-4c-vBT">
-                                        <rect key="frame" x="0.0" y="242.33333333333334" width="300" height="34.333333333333343"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb9-ap-5Gq">
-                                        <rect key="frame" x="0.0" y="370.66666666666669" width="300" height="34.333333333333314"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Add"/>
-                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Eb9-ap-5Gq" secondAttribute="trailing" id="1xO-mt-GWq"/>
-                                    <constraint firstItem="Eb9-ap-5Gq" firstAttribute="top" secondItem="1IG-4c-vBT" secondAttribute="bottom" constant="94" id="5Dm-NW-a3M"/>
                                     <constraint firstItem="zWC-WJ-osr" firstAttribute="leading" secondItem="n1Y-oS-DvY" secondAttribute="leading" id="Chw-Wo-L8E"/>
-                                    <constraint firstItem="1IG-4c-vBT" firstAttribute="leading" secondItem="n1Y-oS-DvY" secondAttribute="leading" id="HwX-uk-8ZW"/>
                                     <constraint firstAttribute="trailing" secondItem="zWC-WJ-osr" secondAttribute="trailing" id="IBG-Mp-fcV"/>
                                     <constraint firstItem="Ocq-dO-gbQ" firstAttribute="leading" secondItem="n1Y-oS-DvY" secondAttribute="leading" id="MN4-wq-eQi"/>
                                     <constraint firstAttribute="trailing" secondItem="Ocq-dO-gbQ" secondAttribute="trailing" id="OQy-Rq-kBN"/>
-                                    <constraint firstItem="Ocq-dO-gbQ" firstAttribute="top" secondItem="zWC-WJ-osr" secondAttribute="bottom" constant="94" id="Se4-pk-z18"/>
                                     <constraint firstItem="zWC-WJ-osr" firstAttribute="top" secondItem="n1Y-oS-DvY" secondAttribute="top" id="aOW-uG-7br"/>
-                                    <constraint firstItem="1IG-4c-vBT" firstAttribute="top" secondItem="Ocq-dO-gbQ" secondAttribute="bottom" constant="94" id="chh-Yv-joa"/>
-                                    <constraint firstItem="Eb9-ap-5Gq" firstAttribute="leading" secondItem="n1Y-oS-DvY" secondAttribute="leading" id="ePp-O4-kIC"/>
-                                    <constraint firstAttribute="trailing" secondItem="1IG-4c-vBT" secondAttribute="trailing" id="oRY-D9-BbR"/>
-                                    <constraint firstAttribute="bottom" secondItem="Eb9-ap-5Gq" secondAttribute="bottom" id="prt-Go-YO8"/>
+                                    <constraint firstItem="Ocq-dO-gbQ" firstAttribute="top" secondItem="zWC-WJ-osr" secondAttribute="bottom" constant="94" id="jwd-ZO-DvY"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1IG-4c-vBT">
+                                <rect key="frame" x="46" y="559" width="300" height="34.333333333333343"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancel:" destination="p1s-e2-wXg" eventType="touchUpInside" id="Ekg-kP-9WA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb9-ap-5Gq">
+                                <rect key="frame" x="37" y="638" width="300" height="34.333333333333371"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Add"/>
+                                <connections>
+                                    <action selector="AddNew:" destination="p1s-e2-wXg" eventType="touchUpInside" id="iIH-hw-3dn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tjp-xy-AgD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="tjp-xy-AgD" firstAttribute="bottom" secondItem="Eb9-ap-5Gq" secondAttribute="bottom" constant="169.66999999999999" id="4i3-Hw-wcs"/>
+                            <constraint firstItem="1IG-4c-vBT" firstAttribute="top" secondItem="n1Y-oS-DvY" secondAttribute="bottom" constant="31" id="H9z-nr-sSz"/>
+                            <constraint firstItem="tjp-xy-AgD" firstAttribute="trailing" secondItem="Eb9-ap-5Gq" secondAttribute="trailing" constant="56" id="RMl-Yw-9yX"/>
                             <constraint firstItem="tjp-xy-AgD" firstAttribute="bottom" secondItem="n1Y-oS-DvY" secondAttribute="bottom" constant="314" id="T0A-01-Sie"/>
                             <constraint firstItem="tjp-xy-AgD" firstAttribute="trailing" secondItem="n1Y-oS-DvY" secondAttribute="trailing" constant="47" id="YXr-uV-ldu"/>
+                            <constraint firstItem="tjp-xy-AgD" firstAttribute="trailing" secondItem="1IG-4c-vBT" secondAttribute="trailing" constant="47" id="czj-v8-fuG"/>
                             <constraint firstItem="n1Y-oS-DvY" firstAttribute="leading" secondItem="tjp-xy-AgD" secondAttribute="leading" constant="46" id="fTw-FW-oLF"/>
+                            <constraint firstItem="Eb9-ap-5Gq" firstAttribute="top" secondItem="1IG-4c-vBT" secondAttribute="bottom" constant="44.670000000000002" id="iZb-pS-RSY"/>
                             <constraint firstItem="n1Y-oS-DvY" firstAttribute="top" secondItem="tjp-xy-AgD" secondAttribute="top" constant="123" id="l3r-BP-faW"/>
+                            <constraint firstItem="1IG-4c-vBT" firstAttribute="leading" secondItem="tjp-xy-AgD" secondAttribute="leading" constant="46" id="ma4-FU-N1c"/>
+                            <constraint firstItem="Eb9-ap-5Gq" firstAttribute="leading" secondItem="tjp-xy-AgD" secondAttribute="leading" constant="37" id="tM3-iF-N26"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bzI-XP-OHo"/>
+                    <connections>
+                        <outlet property="textFiled" destination="Ocq-dO-gbQ" id="X4i-AY-8Bs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MkL-Ld-e7Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
